improve(template modal): fix color contrast
related to #12978

--- a/client/src/modules/components/DefinitionSelection/DefinitionSelection.scss
+++ b/client/src/modules/components/DefinitionSelection/DefinitionSelection.scss
@@ -5,6 +5,10 @@
     max-width: max-content;
   }
 
+  .cds--list-box {
+    background-color: var(--cds-field-02);
+  }
+
   .container {
     display: flex;
     flex-grow: 1;
